fix: correct master routes:
- equipments (plural)
- technician with name
